[gd_scene load_steps=2 format=3 uid="uid://c1cy12yqnrt5f"]

[ext_resource type="Script" path="res://scene/pause_mniu.gd" id="1_cyyrp"]

[node name="pause_mniu1" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cyyrp")

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.192157, 0.192157, 0.192157, 0.623529)

[node name="GridContainer" type="GridContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -97.5
offset_top = -120.0
offset_right = 97.5
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 13

[node name="Label" type="Label" parent="Control/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "game paused"

[node name="resume" type="Button" parent="Control/GridContainer"]
layout_mode = 2
text = "resume"

[node name="HSeparator" type="HSeparator" parent="Control/GridContainer"]
custom_minimum_size = Vector2(195, 30)
layout_mode = 2

[node name="setting" type="Button" parent="Control/GridContainer"]
layout_mode = 2
text = "setting"

[node name="HSeparator2" type="HSeparator" parent="Control/GridContainer"]
custom_minimum_size = Vector2(195, 30)
layout_mode = 2

[node name="quit" type="Button" parent="Control/GridContainer"]
layout_mode = 2
text = "quit"

[node name="volume_setting" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="volume_setting"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.192157, 0.192157, 0.192157, 0.623529)

[node name="GridContainer" type="GridContainer" parent="volume_setting"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -97.5
offset_top = -105.0
offset_right = 97.5
offset_bottom = 105.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 13

[node name="Label" type="Label" parent="volume_setting/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "game paused"

[node name="VBoxContainer" type="VBoxContainer" parent="volume_setting/GridContainer"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="volume_setting/GridContainer/VBoxContainer"]
custom_minimum_size = Vector2(195, 15)
layout_mode = 2

[node name="Label" type="Label" parent="volume_setting/GridContainer/VBoxContainer"]
layout_mode = 2
text = "volume"

[node name="resume" type="HSlider" parent="volume_setting/GridContainer/VBoxContainer"]
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="volume_setting/GridContainer/VBoxContainer"]
custom_minimum_size = Vector2(195, 15)
layout_mode = 2

[node name="mute" type="CheckButton" parent="volume_setting/GridContainer"]
layout_mode = 2
text = "mute"

[node name="HSeparator3" type="HSeparator" parent="volume_setting/GridContainer"]
custom_minimum_size = Vector2(195, 30)
layout_mode = 2

[node name="resume2" type="Button" parent="volume_setting/GridContainer"]
layout_mode = 2
text = "resume"

[connection signal="pressed" from="Control/GridContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Control/GridContainer/setting" to="." method="_on_setting_pressed"]
[connection signal="pressed" from="Control/GridContainer/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="volume_setting/GridContainer/resume2" to="." method="_on_resume_pressed"]
